    first cycle of each opcode is also logged
  * light pen emulation
  * the file I/O ROM module now also includes a tape turbo; to enable
    it, set $0647 to $17, $27, $37, or $47 to select speed (from slowest
    to fastest), and use device 7 when saving
  * tape playback and recording can be sent to the sound output
  * the RAM startup pattern has been made configurable
  * various bug fixes

Changes in version 1.1.3
------------------------

  * fixed bug in Hannes memory expansion emulation
  * improved 6523 emulation in 1551 floppy drives
  * minor bug fixes

Changes in version 1.1.2
------------------------

  * fixed bug that caused the tape input signal to get stuck at high
    level sometimes even after stopping or closing the tape
  * optimized 1541 high timing accuracy mode
  * adjusted reSID filter for different clock frequency in Plus/4

Changes in version 1.1.1
------------------------

  * added new 1541 timing code that fixes some programs that previously
    did not load, at the expense of higher CPU usage; it is enabled by
    default, and can be turned on/off in the floppy configuration dialog
  * more accurate emulation of television vertical synchronization
  * MacOS X build fixes; also added patch for FLTK 1.1.7 which fixes the
    check callback on OS X
  * improvements and fixes in TED video shift register emulation
  * fixed CPU I/O port data direction register ($0000)
  * the ROM package now includes the 1541 DOS, rather than the 1541-II,
    as the latter breaks some demos; the 1541-II can still be used by
    loading dos15412.rom to ROM segment 10 in the machine configuration
  * minor optimizations

Changes in version 1.1.0
------------------------

  * implemented 1551 drive emulation
  * added floppy drive LED display to the GUI (1541 is red, 1551 is
    green, and 1581 is yellow)
  * the debugger now allows for debugging floppy drives; the drives are
    also mapped to the physical address range $180000-$1BFFFF