@@ -380,7 +380,7 @@ class Plus4EmuGUI_MachineConfigWindow {open
               }
               Fl_Input memoryROM0CFileNameValuator {
                 callback {{
-  setROMImageFile(0x07, o->value());
+  setROMImageFile(0x0C, o->value());
 }}
                 xywh {75 405 165 25} color 0 selection_color 238 labelcolor 52 textcolor 52
                 code0 {o->cursor_color(FL_YELLOW);}
@@ -640,6 +640,8 @@ class Plus4EmuGUI_MachineConfigWindow {open
   memoryROM06OffsetValuator->value(double(gui.config.memory.rom[0x06].offset));
   memoryROM07FileNameValuator->value(gui.config.memory.rom[0x07].file.c_str());
   memoryROM07OffsetValuator->value(double(gui.config.memory.rom[0x07].offset));
+  memoryROM0CFileNameValuator->value(gui.config.memory.rom[0x0C].file.c_str());
+  memoryROM0COffsetValuator->value(double(gui.config.memory.rom[0x0C].offset));
   memoryROM10FileNameValuator->value(gui.config.memory.rom[0x10].file.c_str());
   memoryROM10OffsetValuator->value(double(gui.config.memory.rom[0x10].offset));
   memoryROM20FileNameValuator->value(gui.config.memory.rom[0x20].file.c_str());
@@ -679,8 +681,8 @@ class Plus4EmuGUI_MachineConfigWindow {open
       long    offs = long(gui.config.memory.rom[segment_].offset);
       bool    updateFlag = false;
       while ((offs + 32767L) < fSize &&
-             segment_ != 0x07 && segment_ != 0x10 &&
-             segment_ != 0x20 && segment_ != 0x31) {
+             segment_ != 0x07 && segment_ != 0x0C &&
+             segment_ != 0x10 && segment_ != 0x20 && segment_ != 0x31) {
         segment_++;
         offs = offs + 16384L;
         updateFlag = true;
@@ -737,6 +739,9 @@ class Plus4EmuGUI_MachineConfigWindow {open
         break;
       case 0x07:
         memoryROM07FileNameValuator->value(gui.config.memory.rom[segment_].file.c_str());
+        break;
+      case 0x0C:
+        memoryROM0CFileNameValuator->value(gui.config.memory.rom[segment_].file.c_str());
         break;
       case 0x10:
         memoryROM10FileNameValuator->value(gui.config.memory.rom[segment_].file.c_str());
