@@ -198,6 +198,27 @@ namespace Plus4Emu {
      */
     virtual void setLightPenPosition(int xPos, int yPos);
     /*!
+     * Set if printer emulation should be enabled.
+     */
+    virtual void setEnablePrinter(bool isEnabled);
+    /*!
+     * Get the current printer output as a 8-bit greyscale image.
+     * 'buf_' contains 'w_' * 'h_' bytes. If there is no printer, a NULL
+     * buffer pointer, and zero width and height will be returned.
+     */
+    virtual void getPrinterOutput(const uint8_t*& buf_,
+                                  int& w_, int& h_) const;
+    /*!
+     * Clear the printer output buffer, and reset the head position to
+     * the top of the page.
+     */
+    virtual void clearPrinterOutput();
+    /*!
+     * Returns the current state of printer LEDs as a bitmap (if bit 0 is set,
+     * LED 1 is on, if bit 1 is set, LED 2 is on, etc.).
+     */
+    virtual uint8_t getPrinterLEDState() const;
+    /*!
      * Returns status information about the emulated machine (see also
      * struct VMStatus above, and the comments for functions that return
      * individual status values).
